added action and method attributes

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -23,9 +23,9 @@
            <h1 class="logo">Detention Logs</h1>
 	       <p class="loud">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
-        <form class="mail-list">
-            <legend>Get access soon. <label for="email">Sign up for updates.</label></legend>
-	        <input type="email" name="email" placeholder="Email Address" id="email" required/>
+        <form class="mail-list" action="" method="post">
+            <legend>Get access soon. <label for="">Sign up for updates.</label></legend>
+	        <input type="email" name="" placeholder="Email Address" id="" required/>
 	        <label for="submit" class="btn">
 	        	Submit
 	        	<input type="submit" />
