holding page ready, sans working form.

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -12,19 +12,16 @@
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
         <meta name="viewport" content="width=device-width">
 
-
         <link rel="stylesheet" href="css/style.css">
-
-        <!-- needs html shiv-->
-        <!-- needs respond js-->        
+        <script src="js/fixers.js"></script>
     </head>
-    <body>
+    <body class="h-card">
         <article class="site-intro">
-           <h1 class="logo">Detention Logs</h1>
-	       <p class="loud">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
+           <h1 class="logo p-org fn">Detention Logs</h1>
+	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
         <form class="mail-list" action="" method="post">
-            <legend>Get access soon. <label for="">Sign up for updates.</label></legend>
+            <legend>Get access soon <label for="">Sign up for updates</label></legend>
 	        <input type="email" name="" placeholder="Email Address" id="" required/>
 	        <label for="submit" class="btn">
 	        	Submit
@@ -34,15 +31,15 @@
         </form>
         <footer class="site-footer" role="contentinfo">
 	        <ul class="contact">
-	        	<li><a href="http://twitter.com/detentionlogs" rel="me">@DetentionLogs</a></li>
-	        	<li><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#100;&#x65;&#x74;&#101;&#x6e;&#116;&#105;&#x6f;&#x6e;&#x6c;&#x6f;&#103;&#115;&#x40;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#111;&#x6d;">Contact</a></li>
+	        	<li><a href="http://twitter.com/detentionlogs" class="u-url twitter" rel="me">@DetentionLogs</a></li>
+	        	<li><a class="u-email email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
 <!-- 		        <li><a href="/privacy">Privacy</a></li> -->
 	        </ul>
         </footer>
+<!--
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="js/jquery-1.9.0.min.js"><\/script>')</script>
+-->
 
         <!-- Google Analytics -->
         <script>
