--- a/mockups/incident.html
+++ b/mockups/incident.html
@@ -7,7 +7,7 @@
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
     
 <article class="incident">
