--- a/mockups/index.html
+++ b/mockups/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="js/fixers.js"></script>
     </head>
-    <body class="h-card">
+    <body class="h-card holding">
         <article class="site-intro">
            <h1 class="logo p-org fn">Detention Logs</h1>
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
