added .distinct style for more text control

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -21,7 +21,7 @@
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
         <form class="mail-list" action="" method="post">
-            <legend>Get access soon <label for="">Sign up for updates</label></legend>
+            <legend class="distinct">Get access soon <label for="">Sign up for updates</label></legend>
 	        <input type="email" name="" placeholder="Email Address" id="" required/>
 	        <label for="submit" class="btn">
 	        	Submit
