change .btn to a call to action

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -24,7 +24,7 @@
             <legend class="distinct">Get access soon <label for="">Sign up for updates</label></legend>
 	        <input type="email" name="" placeholder="Email Address" id="" required/>
 	        <label for="submit" class="btn">
-	        	Submit
+	        	Subscribe
 	        	<input type="submit" />
 	        </label>
 	        <small class="supporting">Receive occasional emails about our releases.<!--  <a href="http://detentionlogs.com/about/privacy-policy" title="Detention Logs Privacy Policy">See our Privacy Policy</a>. --></small>
