added privacy policy back in

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -27,13 +27,12 @@
 	        	Subscribe
 	        	<input type="submit" />
 	        </label>
-	        <small class="supporting">Receive occasional emails about our releases.<!--  <a href="http://detentionlogs.com/about/privacy-policy" title="Detention Logs Privacy Policy">See our Privacy Policy</a>. --></small>
+	        <small class="supporting">Receive occasional emails about our releases.  <a href="about/privacy/" title="Detention Logs Privacy Policy">See&nbsp;our&nbsp;Privacy&nbsp;Policy</a>.</small>
         </form>
         <footer class="site-footer" role="contentinfo">
 	        <ul class="contact">
 	        	<li><a href="http://twitter.com/detentionlogs" class="u-url twitter" rel="me">@DetentionLogs</a></li>
 	        	<li><a class="u-email email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
-<!-- 		        <li><a href="/privacy">Privacy</a></li> -->
 	        </ul>
         </footer>
 <!--
