--- a/mockups/incident-1-7AFG2G.html
+++ b/mockups/incident-1-7AFG2G.html
@@ -11,28 +11,34 @@
 </head>
 <body>
 	<article class="incident">
-		<header>
+	    <section class="incident-primary main">
 	        <h1>
 	            <span class="occured-on datetime">2011-05-25</span>
 	            <span class="type">Self Harm - Actual</span>
 	            at  <span class="location">Villawood <abbr title="Immigration Detention Centre">IDC</abbr></span>
 	        </h1>
-	    </header>
-	    <section class="incident-summary loud">
-	    	<dl>
+			<dl class="incident-primary-meta">
+				<dt "incident-type">Type</dt>
+					<dd "incident-type"><a href="">Self Harm - Actual</a></dd>
+				<dt class="incident-location">Location</dt>
+					<dd class="incident-location"><a href="">Villawood IDC</a></dd>
+				<dt class="incident-occured-on">Occured On</dt>
+					<dd class="incident-occured-on"><a href="">2011-05-25</a></dd>
+			</dl>
+	    	<dl class="incident-summary">
 	    		<dt>Incident Summary</dt>
 		 	   		<dd>Client: <abbr class="redacted" title="text redacted under section 47F(1) of the FOI Act ###">s. 47F(1)</abbr> attempted actual Self Harm in <abbr title="">SKSA</abbr> holding rooms.</dd>
 	    	</dl>
 	    </section>
-	     <dl class="discrete">
+	    <dl class="discrete main">
 	            <dt class="incident-number">Incident Number</dt>
 	                <dd class="incident-number">1-7AFG2G</dd>
-	            <dt class="level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
-	                <dd class="level critical">Critical</dd>
-	            <dt class="location-details">Location Details</dt>
-	                <dd class="location -details">Sydney Kingsford Smith Airport</dd>
+	            <dt class="incident-level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
+	                <dd class="incident-level critical">Critical</dd>
+	            <dt class="incident-location-details">Location Details</dt>
+	                <dd class="incident-location-details">Sydney Kingsford Smith Airport</dd>
 	    </dl>
-	     <section class="explanation note">
+	     <section class="explanation note box">
 			<h2>What is this?</h2>
 			<p></p>
 		 </section>
