--- a/mockups/incident-1-4M3M9X.html
+++ b/mockups/incident-1-4M3M9X.html
@@ -11,28 +11,30 @@
 </head>
 <body>
 	<article class="incident">
-		<header>
-			<h1>
-		    	<span class="occured-on datetime">2010-09-13</span>
-		    	<span class="type">Assault - Serious</span>
-		        at  <span class="location">Gwalia Lodge</span>
-		    </h1>
-		</header>
-	    <section class="incident-summary">
-	    	<dl>
+	    <section class="incident-primary main">
+			<h1><span class="incident-occured-on">2010-09-13</span> <span class="incident-type">Assault - Serious</span> at <span class="incident-location">Gwalia Lodge</span></h1>
+			<dl class="incident-primary-meta">
+					<dt class="incident-type">Type</dt>
+						<dd class="incident-type"><a href="">Assault - Serious</a></dd>
+					<dt class="incident-location">Location</dt>
+						<dd class="incident-location"><a href="">North Test Point IDC</a></dd>
+					<dt class="incident-occured-on">Occured On</dt>
+						<dd class="incident-occured-on"><a href="">2010-09-13</a></dd>
+			</dl>
+	    	<dl class="incident-summary">
 	    		<dt>Incident Summary</dt>
 		 	   		<dd>Diac Regional Manager informed Serco of alleged sexual assault o<abbr class="redacted" title="text redacted under section 47F(1) of the FOI Act ###">s. 47F(1)</abbr> All Participents being interviewed by WA Police 16/7. No charges laid by <abbr title="Western Australia Police">WAPOL</abbr> client returned to <abbr title="Leonora Alternative Place of Detention">LAPOD</abbr> separated from compound pending trans. to <abbr title="Perth Immigration Detention Centre">PIDC</abbr></dd>
 	    	</dl>
 	    </section>
-		<dl class="discrete">
+		<dl class="discrete main">
             <dt class="incident-number">Incident Number</dt>
                 <dd class="incident-number">1-4M3M9X</dd>
-            <dt class="level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
-                <dd class="level critical">Critical</dd>
-            <dt class="location-details">Location Details</dt>
-                <dd class="location-details">Roon 38 Gwalia Lodge</dd>
+            <dt class="incident-level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
+                <dd class="incident-level critical">Critical</dd>
+            <dt class="incident-location-details">Location Details</dt>
+                <dd class="incident-location-details">Roon 38 Gwalia Lodge</dd>
 	    </dl>
-	    <section class="explanation note">
+	    <section class="explanation note box">
 			<h2>What is this?</h2>
 			<p></p>
 		 </section>
