added supporting class to push back footer

--- a/mockups/about/privacy/index.html
+++ b/mockups/about/privacy/index.html
@@ -30,7 +30,7 @@
 			<p>While we take online privacy seriously, visitors should be aware that (like almost every other site you visit) we can’t guarantee that your connection with our site is secure. Any personal information you do provide is at your own risk. We strongly support you in taking an interest in your privacy online and recommend that you check out <a href="http://www.ghostery.com/">Ghostery</a>, a browser add-on to help users understand who is tracking them, and learn about <a href="https://www.eff.org/issues/do-not-track">Do Not Track</a>.</p>
 	    </article>
         <footer class="site-footer" role="contentinfo">
-	        <ul class="contact">
+	        <ul class="contact supporting">
 	        	<li><a href="http://twitter.com/detentionlogs" class="u-url twitter" rel="me">@DetentionLogs</a></li>
 	        	<li><a class="u-email email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
 	        </ul>
