used discrete for contact info on holding

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -30,7 +30,7 @@
 	        <small class="supporting">Receive occasional emails about our releases.  <a href="about/privacy/" title="Detention Logs Privacy Policy">See&nbsp;our&nbsp;Privacy&nbsp;Policy</a>.</small>
         </form>
         <footer class="site-footer" role="contentinfo">
-	        <ul class="contact">
+	        <ul class="contact discrete">
 	        	<li><a href="http://twitter.com/detentionlogs" class="u-url twitter" rel="me">@DetentionLogs</a></li>
 	        	<li><a class="u-email email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
 	        </ul>
