--- a/mockups/about/privacy/index.html
+++ b/mockups/about/privacy/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Detention Logs | Opening Australia's Immigration Detention</title>
+        <title>Privacy Policy | Detention Logs</title>
         
         <meta name="author" content="Detention Logs">
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
