updated to latest copy

--- a/mockups/about/privacy/index.html
+++ b/mockups/about/privacy/index.html
@@ -22,13 +22,21 @@
     	</header>
 	    <article class="main reading">
 			<h1 id="privacypolicy">Privacy Policy</h1>
-			<p>Detention Logs is committed to protecting the privacy of visitors to our site. Where we do collect information about our users, we want them to know about it and understand how and why we use it—so there are no surprises.</p>
+			
+			<p class="lede">Detention Logs is committed to protecting the privacy of visitors to our site. Where we do collect information about our users, we want them to know about it and understand how and why we use it—so there are no&nbsp;surprises.</p>
+			
 			<h2 id="googleanalytics">Google Analytics</h2>
+			
 			<p>Detention Logs collects aggregate information about the use of our site to help us improve our work and measure its impact. This information helps us understand for example; how many visits a particular page has had, roughly where our visits come from geographically, how search engines are directing people to our site, and what pages are popular on social media. The information collected does not include any personal information other than users’ IP addresses. We will never disclose any IP address information, or information that could be used to identify an individual or group of users.</p>
+			
 			<h2 id="emailnewsletter">Email Newsletter</h2>
+			
 			<p>Detention Logs maintains an email newsletter to keep people informed about our releases and other updates to our site. It’s voluntary to provide your email address to us and we guarantee that we won’t share, sell or swap it with any third parties, ever. If you want to remove yourself from our mailing list, just email <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#100;&#x65;&#x74;&#101;&#x6e;&#116;&#105;&#x6f;&#x6e;&#x6c;&#x6f;&#103;&#115;&#x40;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#111;&#x6d;">&#x64;&#101;&#116;&#x65;&#110;&#x74;&#x69;&#x6f;&#x6e;&#x6c;&#x6f;&#103;&#x73;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#x63;&#x6f;&#109;</a>—your email address will not be stored.</p>
+			
 			<h2 id="yourprivacyonline">Your Privacy Online</h2>
-			<p>While we take online privacy seriously, visitors should be aware that (like almost every other site you visit) we can’t guarantee that your connection with our site is secure. Any personal information you do provide is at your own risk. We strongly support you in taking an interest in your privacy online and recommend that you check out <a href="http://www.ghostery.com/">Ghostery</a>, a browser add-on to help users understand who is tracking them, and learn about <a href="https://www.eff.org/issues/do-not-track">Do Not Track</a>.</p>
+			
+			<p>As always, visitors should be aware that (like almost every other site you visit) we can’t guarantee that your connection with our site is secure. Any personal information you do provide is at your own risk. We strongly support you in taking an interest in your privacy online and recommend that you check out <a href="http://www.ghostery.com/">Ghostery</a>, a browser add-on to help users understand who is tracking them, <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a> and <a href="https://www.eff.org/issues/do-not-track">Do Not Track</a>.</p>
+
 	    </article>
         <footer class="site-footer" role="contentinfo">
 	        <ul class="contact supporting">
