mockups html and sass

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -21,8 +21,8 @@
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
         <form class="mail-list" action="" method="post">
-            <legend class="distinct">Get access soon <label for="">Sign up for updates</label></legend>
-	        <input type="email" name="" placeholder="Email Address" id="" required/>
+            <legend class="distinct"><label for="email">Get Detention&nbsp;Logs updates</label></legend>
+	        <input type="email" name="email" placeholder="Email Address" id="email" required/>
 	        <label for="submit" class="btn">
 	        	Subscribe
 	        	<input type="submit" />
