--- a/mockups/incident-1-4M3M9X.html
+++ b/mockups/incident-1-4M3M9X.html
@@ -26,7 +26,7 @@
 		 	   		<dd>Diac Regional Manager informed Serco of alleged sexual assault o<abbr class="redacted" title="text redacted under section 47F(1) of the FOI Act ###">s. 47F(1)</abbr> All Participents being interviewed by WA Police 16/7. No charges laid by <abbr title="Western Australia Police">WAPOL</abbr> client returned to <abbr title="Leonora Alternative Place of Detention">LAPOD</abbr> separated from compound pending trans. to <abbr title="Perth Immigration Detention Centre">PIDC</abbr></dd>
 	    	</dl>
 	    </section>
-		<dl class="discrete main">
+		<dl class="discrete main incident-additional">
             <dt class="incident-number">Incident Number</dt>
                 <dd class="incident-number">1-4M3M9X</dd>
             <dt class="incident-level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
@@ -34,8 +34,14 @@
             <dt class="incident-location-details">Location Details</dt>
                 <dd class="incident-location-details">Roon 38 Gwalia Lodge</dd>
 	    </dl>
+	    <dl class="discrete main related">
+		    <dt class="related-documents">Related Documents</dt>
+		    	<dd class="related-documents"><a href=""><cite>Incident Detail Report</cite></a></dd>
+		    <dt class="related-investigations">Related Investigations</dt>
+		    	<dd class="related-investigations"><a href=""><cite>Removals Story</cite></a></dd>
+	    </dl>
 	    <section class="explanation note box">
-			<h2>What is this?</h2>
+			<h2>About this incident</h2>
 			<p></p>
 		 </section>
 	</article>
