--- a/mockups/incident-1-7AFG2G.html
+++ b/mockups/incident-1-7AFG2G.html
@@ -12,25 +12,24 @@
 <body>
 	<article class="incident">
 	    <section class="incident-primary main">
-	        <h1>
-	            <span class="occured-on datetime">2011-05-25</span>
-	            <span class="type">Self Harm - Actual</span>
-	            at  <span class="location">Villawood <abbr title="Immigration Detention Centre">IDC</abbr></span>
-	        </h1>
+	        <h1>Incident 1-7AFG2G</h1>
 			<dl class="incident-primary-meta">
 				<dt "incident-type">Type</dt>
 					<dd "incident-type"><a href="">Self Harm - Actual</a></dd>
 				<dt class="incident-location">Location</dt>
 					<dd class="incident-location"><a href="">Villawood IDC</a></dd>
 				<dt class="incident-occured-on">Occured On</dt>
-					<dd class="incident-occured-on"><a href="">2011-05-25</a></dd>
+					<dd class="incident-occured-on"><a href="">2011-05-25</a> at 8:00 am</dd>
 			</dl>
 	    	<dl class="incident-summary">
 	    		<dt>Incident Summary</dt>
 		 	   		<dd>Client: <abbr class="redacted" title="text redacted under section 47F(1) of the FOI Act ###">s. 47F(1)</abbr> attempted actual Self Harm in <abbr title="">SKSA</abbr> holding rooms.</dd>
 	    	</dl>
+	    	<p></p>
 	    </section>
-	    <dl class="discrete main">
+	    <dl class="discrete main incident-additional">
+                <dt class="incident-informed-by">Informed By</dt>
+	            	<dd class="incident-informed-by">Service Provider Staff</dd>
 	            <dt class="incident-number">Incident Number</dt>
 	                <dd class="incident-number">1-7AFG2G</dd>
 	            <dt class="incident-level"><abbr title="The level of ... as defined by Detention Centre Staff">Level</abbr></dt>
@@ -38,7 +37,15 @@
 	            <dt class="incident-location-details">Location Details</dt>
 	                <dd class="incident-location-details">Sydney Kingsford Smith Airport</dd>
 	    </dl>
-	     <section class="explanation note box">
+<!-- 	    If there are related documents or investigations -->
+	    <dl class="discrete main related">
+		    <dt class="related-documents">Related Documents</dt>
+		    	<dd class="related-documents"><a href=""><cite>Incident Detail Report - Incident 1-7AFG2G</cite></a></dd>
+		    <dt class="related-investigations">Related Investigations</dt>
+		    	<dd class="related-investigations"><a href=""><cite>Removals Story</cite></a></dd>
+	    </dl>
+<!-- 	    end if -->
+	     <section class="note box main">
 			<h2>What is this?</h2>
 			<p></p>
 		 </section>
