--- a/mockups/index.html
+++ b/mockups/index.html
@@ -20,9 +20,9 @@
            <h1 class="logo p-org fn">Detention Logs</h1>
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
-        <form class="mail-list" action="" method="post">
+        <form class="mail-list" action="/subscribe" method="post">
             <legend class="distinct">Get access soon <label for="">Sign up for updates</label></legend>
-	        <input type="email" name="" placeholder="Email Address" id="" required/>
+	        <input type="email" name="email" placeholder="Email Address" id="" required/>
 	        <label for="submit" class="btn">
 	        	Subscribe
 	        	<input type="submit" />
