added for validation msgs

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -21,6 +21,8 @@
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
         <form class="mail-list" action="" method="post">
+	         <p class="verification-msg box note" id="email-error">Please enter a valid email&nbsp;address</p>
+		     <p class="verification-msg box note" id="email-success">Success. We'll be in touch soon.</p>
             <legend class="distinct"><label for="email">Get Detention&nbsp;Logs updates</label></legend>
 	        <input type="email" name="email" placeholder="Email Address" id="email" required/>
 	        <label for="submit" class="btn">
