corrected meta description

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -9,7 +9,7 @@
         <title>Detention Logs | Opening Australia's Immigration Detention</title>
         
         <meta name="author" content="Detention Logs">
-        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
+        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/style.css">
