--- a/mockups/index.html
+++ b/mockups/index.html
@@ -17,7 +17,7 @@
     </head>
     <body class="h-card holding">
         <article class="site-intro">
-           <h1 class="logo p-org fn">Detention Logs</h1>
+           <h1 class="logo p-org p-name">Detention Logs</h1>
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
         <form class="mail-list" action="" method="post">
