added third party social meta tags

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -6,11 +6,23 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Detention Logs | Opening Australia's Immigration Detention</title>
-        
+        <title>Detention Logs</title>
+
         <meta name="author" content="Detention Logs">
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
         <meta name="viewport" content="width=device-width">
+
+    	<!-- Twitter -->
+	    <meta name="twitter:card" content="summary">
+		<meta name="twitter:url" content="http://detentionlogs.com.au">
+		<meta name="twitter:title" content="Detention Logs">
+		<meta name="twitter:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
+		<meta name="twitter:creator" content="@detentionlogs">
+		<!-- Facebook -->
+	    <meta property="og:title" content="Detention Logs" />
+		<meta property="og:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network." />
+		<meta property="og:url" content="http://detentionlogs.com.au" />
+
 
         <link rel="stylesheet" href="css/style.css">
         <script src="js/fixers.js"></script>
