corrected event js

--- a/mockups/index.html
+++ b/mockups/index.html
@@ -39,7 +39,7 @@
 	        <input type="email" name="email" placeholder="Email Address" id="email" required/>
 	        <label class="btn">
 	        	Subscribe
-	        	<input type="submit" onClick="_gaq.push(['_trackEvent', 'contact', 'subscribe', 'holding form']);"/>
+	        	<input type="submit" onClick="_gaq.push(['_trackEvent', 'contact', 'list-subscribe', 'holding form']);"/>
 	        </label>
 	        <small class="supporting">Receive occasional emails about our releases.  <a href="about/privacy/" title="Detention Logs Privacy Policy">See&nbsp;our&nbsp;Privacy&nbsp;Policy</a>.</small>
         </form>
@@ -60,10 +60,10 @@
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
+
 		  ga('create', 'UA-40270731-1', 'detentionlogs.com.au');
 		  ga('send', 'pageview');
-		
+
 		</script>
     </body>
 </html>
