--- a/mockups/index.html
+++ b/mockups/index.html
@@ -11,6 +11,7 @@
         <meta name="author" content="Detention Logs">
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
         <meta name="viewport" content="width=device-width">
+		<meta name="google-site-verification" content="UyFaPbUx_nMcjSfI1G-dkYcTZljC0-do61HPxvESXic" />
 
     	<!-- Twitter -->
 	    <meta name="twitter:card" content="summary">
@@ -18,6 +19,7 @@
 		<meta name="twitter:title" content="Detention Logs">
 		<meta name="twitter:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
 		<meta name="twitter:creator" content="@detentionlogs">
+
 		<!-- Facebook -->
 	    <meta property="og:title" content="Detention Logs" />
 		<meta property="og:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network." />
