cleaned up links added pages

--- a/mockups/about/principles/index.html
+++ b/mockups/about/principles/index.html
@@ -21,7 +21,7 @@
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
 				<li><a href="http://detentionlogs.com.au/about">About</a></li>
 			</ul>
@@ -125,7 +125,7 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
 				<li><a href="http://detentionlogs.com.au/about">About</a></li>
 			</ul>
